--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SBS - DiamondStudios</title>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <h1 id="hello_tag">Hello!</h1>
+    <div id="welcome_and_hello">
+        <h1 id="hello_tag" class="wah">Hello! Welcome to sbs.diamondstudios.dev</h1>
+        <h2 id="username_tag" class="wah">Not Logged in</h2>
+    </div>
+    <h3 id="cookie_notice">This page uses login cookies. If you do not agree to this, please leave the page.</h3>
 
-    <script src="/js/index.js"></script>
+    <script src="/js/index.js" type="module"></script>
 </body>
 </html>
