--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SBS - DiamondStudios</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/all.css">
 </head>
 <body>
     <div id="welcome_and_hello">
         <h1 id="hello_tag" class="wah">Hello! Welcome to sbs.diamondstudios.dev</h1>
-        <h2 id="username_tag" class="wah">Not Logged in</h2>
+        <h2 id="username_tag" class="wah">Not Logged in, <a href="https://discord.com/api/oauth2/authorize?client_id=1058863844576985148&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fapi%2Fcallback&response_type=code&scope=identify">Login?</a></h2>
     </div>
     <h3 id="cookie_notice">This page uses login cookies. If you do not agree to this, please leave the page.</h3>
 
