--- a/public/html/some_clicker_game.html
+++ b/public/html/some_clicker_game.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Some Clicker Game!</h1>
-    <button id="kill">KILL</button>
+    <button id="kill">Save and Exit (auto save every 10s, button will flash)</button>
     <div class="container">
         <h3 id="coin_counter">0 (UNLOADED)</h3>
         <button id="clicker_button">Click Me | (Enable JS you tool)</button>
@@ -30,12 +30,54 @@
                 <button id="item_purchase">Purchase</button>
                 <p id="item-id">ac_advanced</p>
             </div>
+            <div id="item_autoclicker_three" class="item">
+                <h3 id="span_main"><span id="item_name" class="epic">Epic Autoclicker</span><span id="item_cost">
+                    $500
+                </span></h3>
+                <button id="item_purchase">Purchase</button>
+                <p id="item-id">ac_epic</p>
+            </div>
+            <div id="item_autoclicker_four" class="item">
+                <h3 id="span_main"><span id="item_name" class="epic">Ultra Autoclicker</span><span id="item_cost">
+                    $2500
+                </span></h3>
+                <button id="item_purchase">Purchase</button>
+                <p id="item-id">ac_ultra</p>
+            </div>
+            <div id="item_autoclicker_five" class="item">
+                <h3 id="span_main"><span id="item_name" class="legendary">Legendary Autoclicker</span><span id="item_cost">
+                    $50000
+                </span></h3>
+                <button id="item_purchase">Purchase</button>
+                <p id="item-id">ac_legendary</p>
+            </div>
             <div id="item_clicker_one" class="item">
                 <h3 id="span_main"><span id="item_name" class="rare">Basic Clicker Upgrade</span><span id="item_cost">
                     $250
                 </span></h3>
                 <button id="item_purchase">Purchase</button>
                 <p id="item-id">cl_basic</p>
+            </div>
+            <div id="item_clicker_two" class="item">
+                <h3 id="span_main"><span id="item_name" class="rare">Advanced Clicker Upgrade</span><span id="item_cost">
+                    $2500
+                </span></h3>
+                <button id="item_purchase">Purchase</button>
+                <p id="item-id">cl_advanced</p>
+            </div>
+            <div id="item_clicker_three" class="item">
+                <h3 id="span_main"><span id="item_name" class="epic">Epic Clicker Upgrade</span><span id="item_cost">
+                    $25000
+                </span></h3>
+                <button id="item_purchase">Purchase</button>
+                <p id="item-id">cl_epic</p>
+            </div>
+            <div id="item_clicker_four" class="item">
+                <h3 id="span_main"><span id="item_name" class="legendary">Legendary Clicker Upgrade</span><span id="item_cost">
+                    $250000
+                </span></h3>
+                <button id="item_purchase">Purchase</button>
+                <p id="item-id">cl_legendary</p>
             </div>
         </section>
     </div>
